--- a/8_conclusion.tex
+++ b/8_conclusion.tex
@@ -14,9 +14,7 @@ From software to silicon, we have contributed the following systems to meeting t
 % 
 It leverages the regular structure of inference to reduce the costs of guaranteeing correct execution under frequent power failures.
 % 
-\sonic, though, was more than just the first to demonstrate of inference on such devices.
-% 
-Through modelling it showed the importance of accurate, local inference.
+\sonic was the first to demonstrate of inference on intermittent, energy-harvesting devices and showed the importance of accurate, local inference.
 % 
 It also exposed the inefficiencies of existing commercial devices and stressed the need for new architectures.
 
@@ -49,6 +47,6 @@ It introduces a general-purpose control-flow model that supports arbitrary contr
 
 These contributions form the basis of a new energy-minimal, ULP sensor system stack.
 % 
-They demonstrate that exteme energy-efficiency can be achieved without compromising on programmability.
+They demonstrate that extreme energy-efficiency can be achieved without compromising on programmability.
 %
-This is the power of rethinking the entire stack, optimizing at multiple levels at once reduces energy, increases performance, and ultimately enables new applications.
+This is the power of rethinking the entire stack, optimizing at multiple levels at once, reduces energy, increases performance, and ultimately enables new applications.
