--- a/ack.tex
+++ b/ack.tex
@@ -26,7 +26,7 @@ Bouncing ideas off of Tony and Todd during weekly research meetings, helped me r
 % 
 Souradip's contributions to \riptide's compiler were critical to the project's success and I thoroughly enjoyed our work together.
 
-I have been fortunate to recieve an Apple PhD Fellowship in AI/ML and spend a summer at Apple working on machine learning architecture.
+I have been fortunate to receive an Apple PhD Fellowship in AI/ML and spend a summer at Apple working on machine learning architecture.
 % 
 Jaewon Shin, my manager, helped me navigate research in industry and encouraged me to be independent and pursue difficult but relevant problems.
 
@@ -56,7 +56,7 @@ My parents, Beth and John, encouraged me to pursue a PhD and helped me through t
 % 
 My brother, Reid, is my best friend and has always been there in whatever situation.
 % 
-I am the man that I am today because of my parents and brother.
+I am the man that I am today because of them.
 
 
 \end{acknowledgements}
