--- a/appendix/map.tex
+++ b/appendix/map.tex
@@ -1,6 +1,7 @@
 \chapter{Constraint-based scheduling} 
 
 \section{\snafu's ILP for mapping}
+\label{appendix:snafu:ilp}
 The following describes the integer linear program for \snafu's mapper.
 % 
 It is based on prior work~\cite{nowatzki2013general}.
@@ -92,6 +93,7 @@ Please note that we adopt numpy-like indexing; for example, $M_{el}[e]$ returns 
 Also, $M_{el}[:,l]$ extracts a $|E|\times 1$ column vector and represents the assignment of link, $l$, across all edges.
 
 \section{\riptide's ILP for mapping}
+\label{appendix:riptide:ilp}
 
 \begin{table}[h]
 	\centering
