--- a/refs.bib
+++ b/refs.bib
@@ -2912,6 +2912,10 @@ howpublished = {\url{http://www.nist.gov/director/prog-ofc/report02-3.pdf}}
 	Title = {{Colorama: Architectural Support for Data-Centric Synchronization}},
 	Year = {{2007}}}
 
+ @misc{lorawan, title={What is lorawan specification?}, url={https://lora-alliance.org/about-lorawan/}, journal={LoRa Alliance}, year={2021}, month={Oct}} 
+
+ @misc{hm01b0, title={HM01B0 Ultralow Power CIS}, url={https://www.himax.com.tw/products/cmos-image-sensor/always-on-vision-sensors/hm01b0/}, journal={HM01B0}, publisher={Himax}} 
+
 @inproceedings{cfp_queue,
 	Author = {A. Gandhi and H. Akkary and R. Rajwar and S. T. Srinivasan and K. Lai },
 	Booktitle = {{International Symposium on Computer Architecture}},
@@ -8873,6 +8877,13 @@ year={2015}
   author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
   booktitle={Proc. of the IEEE conference on computer vision and pattern recognition},
   year={2015}
+}
+
+@mastersthesis{traub1986compiler,
+  title={A compiler for the MIT tagged-token dataflow architecture},
+  author={Traub, Kenneth R},
+  year={1986},
+  school={Citeseer}
 }
 
 @inproceedings{nakkiran2015compressing,
