--- a/sonic/8_discuss.tex
+++ b/sonic/8_discuss.tex
@@ -10,10 +10,10 @@ up to $6.9\times$ and $12.2\times$, respectively, over the prior state-of-the-ar
 However, our experience in building \sonictails also showed that there is a large
 opportunity to accelerate inference on ULP sensor devices.
 % 
-However, typical microcontrollers for energy-harvesting systems are poorly
+But, current microcontrollers for energy-harvesting systems are poorly
 suited to efficient inference.
 % 
-Current microcontrollers are sequential, single-cycle processors,
+They are sequential, single-cycle processors,
 and so spend very little of their energy on ``useful work''~\cite{horowitz:isscc14:energy-keynote}.
 %
 For example, by deducting the energy of \texttt{nop} instructions from \autoref{fig:sonic:evaluation:energy:micro},
